tests/golden/errors/generic_before_literal.kso
fn fact n
  n * fact (n - 1)

fn fact 0
  1

fn main
  print "{fact 3}"
