tests/golden/errors/generic_before_literal.stderr
error[formatting]: overloads of `fact` appear most-specific first: literal, then concrete type, then generic
  --> generic_before_literal.kso:4:4
   4 | fn fact 0
          ^
